Corrected banner positioning on smaller windows.

--- a/brambling/sass/modules/_masthead.sass
+++ b/brambling/sass/modules/_masthead.sass
@@ -42,6 +42,7 @@ $cover-image-padding-vertical: $line-height-computed
     margin-bottom: -$masthead-padding-vertical
     margin-top: 0
     background-size: cover
+    background-position: center
     background-repeat: no-repeat
     +box-shadow(inset 0 0 0 1px rgba(0,0,0,.35))
     +border-radius($border-radius-base $border-radius-base 0 0)
