--- a/brambling/static/brambling/css/styles.css
+++ b/brambling/static/brambling/css/styles.css
@@ -6256,6 +6256,7 @@ footer a {
   margin-bottom: -20px;
   margin-top: 0;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   -moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.35);
   -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.35);
